The big rename from resin.io to Balena
Signed-off-by: Theodor Gherzan <theodor@resin.io>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>ResinOS Tests Results</title>
+		<title>Balena Tests Results</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu+Mono">
 	</head>
@@ -16,8 +16,8 @@
 							schema: 'schema.yaml',
 							contentPath: 'results',
 							repo: {
-								name: 'resinos-tests',
-								account: 'resin-io',
+								name: 'balena-tests',
+								account: 'balena-io',
 								file: 'results.yaml',
 								ref: 'gh-pages'
 							}
