--- a/pages/Getting-Started/quickstart.html
+++ b/pages/Getting-Started/quickstart.html
@@ -91,10 +91,10 @@
 				<a href="#worker-setup" id="worker-setup" style="color: inherit; text-decoration: none;">
 					<h2>Worker setup</h2>
 				</a>
-				<p>Following are quick start guides into setting up each type of worker:</p>
+				<p>Select which type of worker you want to use:</p>
 				<ol>
-					<li><a href="quickstart/quickstart-testbot.html">Testbot worker</a></li>
-					<li><a href="quickstart/quickstart-qemu.html">QEMU worker</a></li>
+					<li><a href="quickstart/quickstart-testbot.html">Testbot worker</a> - Connect an actual device to your testbot and test on it</li>
+					<li><a href="quickstart/quickstart-qemu.html">QEMU worker</a> - Create a virtual device and run tests on that that.</li>
 				</ol>
 			</div>
 		</div>
