--- a/pages/Getting-Started/quickstart/quickstart-qemu.html
+++ b/pages/Getting-Started/quickstart/quickstart-qemu.html
@@ -75,19 +75,17 @@
 				<a href="#getting-started-with-qemu-worker" id="getting-started-with-qemu-worker" style="color: inherit; text-decoration: none;">
 					<h1>Getting Started with QEMU Worker</h1>
 				</a>
-				<p>This is a quick start guide for using the leviathan framework with the QEMU worker.</p>
-				<a href="#prepare-qemu-worker" id="prepare-qemu-worker" style="color: inherit; text-decoration: none;">
-					<h2>Prepare Qemu worker</h2>
-				</a>
-				<p>As a prerequisite: </p>
-				<ol>
-					<li>Go through the steps listed on the <a href="../quickstart.html">Quickstart Page</a></li>
-				</ol>
+				<p>This is a quick start guide for using the Leviathan testing framework with a virtualized QEMU Device Under Test (DUT) called the QEMU worker. This workflow is particularly helpful for debugging, faster tester runs than actual hardware or if you don&#39;t have hardware on hand. </p>
+				<p>Before beginning, make sure you completed the Leviathan pre-requisted listed on the <a href="../quickstart.html">Quickstart Page</a>.</p>
 				<a href="#start-your-first-test-run" id="start-your-first-test-run" style="color: inherit; text-decoration: none;">
 					<h2>Start your first test run</h2>
 				</a>
-				<p>For your first test run, we will be running the <a href="https://github.com/balena-os/leviathan/tree/master/suites/e2e">e2e test suite</a>.</p>
-				<p>A balenaOS image that is used to flash and provision the device under test will be needed for the test. You can download an unmanaged genericx86-64-ext balenaOS image from <a href="https://www.balena.io/os/#download">balena.io/os</a> and place it in the workspace folder. Leviathan support OS images uncompressed or compressed in <code>.gz</code> or <code>.zip</code> format.</p>
+				<p>For your first test run, we will be running the <a href="https://github.com/balena-os/leviathan/tree/master/suites/e2e">e2e test suite</a>. This is a basic testing suite to test your worker configuration and if the setup is correct. Each Levaithan test run needs the following to start testing that the user has to provide:</p>
+				<ol>
+					<li><strong>The test suite you want to run</strong>: <a href="https://github.com/balena-os/leviathan/tree/master/suites/e2e">e2e test suite</a> (already provided)</li>
+					<li><strong>A balenaOS image used to flash, provision and test the DUT</strong>. The test will automatically download an OS image this time. So no need to provide your own image.  </li>
+					<li><strong>A test configuration using the <code>config.js</code> file</strong>: Let&#39;s create one.</li>
+				</ol>
 				<a href="#build-your-configjs-file" id="build-your-configjs-file" style="color: inherit; text-decoration: none;">
 					<h3>Build your <code>config.js</code> file</h3>
 				</a>
@@ -111,11 +109,11 @@
 <span style="color: #002339">    debug: {</span>
 <span style="color: #002339">        unstable: [</span><span style="color: #A44185">&quot;Kill the device under test&quot;</span><span style="color: #002339">],</span>
 <span style="color: #002339">    }</span>
-<span style="color: #002339">    </span><span style="color: #2F86D2">image</span><span style="color: #002339">: </span><span style="color: #A44185">`${</span><span style="color: #2F86D2">__dirname</span><span style="color: #A44185">}/path/to/image`</span><span style="color: #002339">,</span>
+<span style="color: #002339">    </span><span style="color: #2F86D2">image</span><span style="color: #002339">: </span><span style="color: #174781">false</span><span style="color: #002339">, </span>
 <span style="color: #002339">    workers: [</span><span style="color: #A44185">&#039;http://worker&#039;</span><span style="color: #002339">],</span>
 <span style="color: #002339">};</span>
 </code></pre>
-				<p>To provide values of environment variables easily, you can create a <code>.env</code> file in the root of the leviathan directory. Use the format below as boilerplate. </p>
+				<p>To provide values of environment variables easily, you can create a <code>.env</code> file in the root of the leviathan directory. Use the format below as boilerplate. No need to do this for this test run. </p>
 				<pre><code><span style="color: #2F86D2">WORKSPACE</span><span style="color: #7B30D0">=</span><span style="color: #002339">.</span><span style="color: #7B30D0">/</span><span style="color: #2F86D2">workspace</span>
 <span style="color: #2F86D2">REPORTS</span><span style="color: #7B30D0">=</span><span style="color: #002339">.</span><span style="color: #7B30D0">/</span><span style="color: #2F86D2">workspace</span><span style="color: #7B30D0">/</span><span style="color: #2F86D2">reports</span>
 <span style="color: #2F86D2">SUITES</span><span style="color: #7B30D0">=/</span><span style="color: #2F86D2">path</span><span style="color: #7B30D0">/</span><span style="color: #2F86D2">to</span><span style="color: #7B30D0">/</span><span style="color: #2F86D2">suites</span>
@@ -126,10 +124,13 @@
 <span style="color: #2F86D2">BALENA_ARCH</span><span style="color: #7B30D0">=</span><span style="color: #2F86D2">amd64</span>
 <span style="color: #2F86D2">BALENACLOUD_APP_NAME</span><span style="color: #7B30D0">=</span><span style="color: #002339">&lt;</span><span style="color: #0444AC">app</span><span style="color: #002339">-</span><span style="color: #0444AC">name</span><span style="color: #002339">&gt;</span>
 </code></pre>
-				<p>To start the test run, navigate to the root of the leviathan directory and run the following command:</p>
+				<a href="#start-the-run" id="start-the-run" style="color: inherit; text-decoration: none;">
+					<h3>Start the run</h3>
+				</a>
+				<p>To start the test run, navigate to the root of the Leviathan directory and run the following command:</p>
 				<pre><code><span style="color: #2F86D2">make</span><span style="color: #002339"> </span><span style="color: #2F86D2">local</span><span style="color: #7B30D0">-</span><span style="color: #2F86D2">test</span>
 </code></pre>
-				<p>This will first build the core and worker services and run the worker using docker-compose. Then, the test will run and the logs will start streaming on the terminal. Wait for the test scenario to finish and check the device logs on the dashboard in the meantime. </p>
+				<p>This will trigger a build of client and core services using docker-compose and begin the test. The logs by various componenet will start streaming on the terminal. Wait for the test scenario to finish and check the device logs on the dashboard in the meantime. </p>
 				<p>A successful run of the e2e test suite without any errors makes sure that your QEMU worker is set up correctly and can be used for further tests.</p>
 				<a href="#let39s-run-some-quotrealquot-tests" id="let39s-run-some-quotrealquot-tests" style="color: inherit; text-decoration: none;">
 					<h2>Let&#39;s run some &quot;real&quot; tests</h2>
@@ -137,11 +138,11 @@
 				<p>We will start with a test run of the <a href="https://github.com/balena-os/meta-balena/tree/master/tests/suites">balenaOS unmanaged testing suite</a>. To get the tests, clone the meta-balena repository. The OS tests are located in the <code>tests/</code> directory.</p>
 				<ul>
 					<li>Either copy the <code>OS test suite</code> directory from meta-balena to the <code>workspace</code> directory </li>
-					<li>or point the <code>suite</code> property to the path of the OS test suite in the meta-balena directory.</li>
+					<li>or point the <code>suite</code> property in your config.js file to the relative path of the OS test suite like mentioned below.</li>
 				</ul>
 				<pre><code class="language-js"><span style="color: #DC3EB7">module</span><span style="color: #002339">.</span><span style="color: #DC3EB7">exports</span><span style="color: #002339"> </span><span style="color: #7B30D0">=</span><span style="color: #002339"> {</span>
 <span style="color: #002339">    deviceType: </span><span style="color: #A44185">&#039;genericx86-64-ext&#039;</span><span style="color: #002339">,</span>
-<span style="color: #002339">    suite: </span><span style="color: #A44185">`${</span><span style="color: #2F86D2">__dirname</span><span style="color: #A44185">}/../suites/os`</span><span style="color: #002339">,</span>
+<span style="color: #002339">    suite: </span><span style="color: #A44185">`${</span><span style="color: #2F86D2">__dirname</span><span style="color: #A44185">}/../suites/os`</span><span style="color: #002339">, </span><span style="color: #357B42">// this path is relative to the workspace directory</span>
 <span style="color: #002339">    config: {</span>
 <span style="color: #002339">        networkWired: </span><span style="color: #174781">false</span><span style="color: #002339">,</span>
 <span style="color: #002339">        networkWireless: </span><span style="color: #174781">false</span><span style="color: #002339">,</span>
@@ -155,10 +156,14 @@
 <span style="color: #002339">};</span>
 </code></pre>
 				<ul>
-					<li>Run <code>make local-test</code> in the root of the project and watch the logs. The logs will start streaming on the terminal for the test run.</li>
-					<li>At the end of the run, reports and logs for the test run will be stored in <code>workspace/reports</code> directory.</li>
+					<li>This time you can provide your own OS image to test. You can download an unmanaged genericx86-64-ext balenaOS image from <a href="https://www.balena.io/os/#download">balena.io/os</a> and place it in the workspace folder if you need to provide one. Change the value of the <code>image</code> property to the path of the image you downloaded.</li>
 				</ul>
-				<p>That&#39;s the end of the quick start guide, you successfully setup your QEMu worker and ran your first test suite.</p>
+				<a href="#start-the-os-test" id="start-the-os-test" style="color: inherit; text-decoration: none;">
+					<h3>Start the OS test</h3>
+				</a>
+				<p>Run <code>make local-test</code> in the root of the project and watch the logs. </p>
+				<p>The logs will start streaming on the terminal for the test run. At the end of the run, reports and logs for the test run will be stored in <code>workspace/reports</code> directory.</p>
+				<p>That&#39;s the end of the quick start guide, you successfully setup your QEMU worker and ran your first test suite.</p>
 				<a href="#where-do-you-go-from-here" id="where-do-you-go-from-here" style="color: inherit; text-decoration: none;">
 					<h2>Where do you go from here?</h2>
 				</a>
